mouse: Check synaptics capabilities only on X11

On other backends we don't have a way to check for synaptics
capabilities so we just show all the touchpad knobs there.

https://bugzilla.gnome.org/show_bug.cgi?id=743266